--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         </script>
 
     <title>Gallery MIA3</title>
+    <link rel="icon" type="image/x-icon" href="AnyConv.com__22-223848_businessman-vector-person-logo-png.ico">
 </head>
 
 <body class="bg-lb">
