--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
                         <div class="py-8 px6 pb-7 ">
                             <h3 class="ml-4 block mb-3 font-semibold text-xl text-fc dark:text-fcd hover:scale-[105%] transition duration-300 ">SYAHRUL RAHMAT MAULANA </h3>
                             <p class="ml-4 mb-5  text-base text-fc dark:text-fcd">Pesan:"Jangan sampai memutuskan tali silaturahmi.Ingat bahwa dulu pernah ada yang saling tolong menolong"<br><br>
-                                Moto:"Tiasa Tuhan Selain Allah SWT Dan Nabi Muhammad Saw Adalah utusannya"<br><br>
+                                Moto:"Tiada Tuhan Selain Allah SWT Dan Nabi Muhammad Saw Adalah utusannya"<br><br>
                                 Kata Mutiara:"Jika mencapai satu atau dua usaha yang sukses anda perlu gagal di beberapa usaha lainnya"</p>
                             <div class="ml-4 flex">
                                 
