--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                         <img src="aset/profile/sahrul1.JPG" class=" rounded-xl w-full hover:scale-[105%] transition duration-300 " alt="gambar">
                         <div class="py-8 px6 pb-7 ">
                             <h3 class="ml-4 block mb-3 font-semibold text-xl text-fc dark:text-fcd hover:scale-[105%] transition duration-300 ">SYAHRUL RAHMAT MAULANA </h3>
-                            <p class="ml-4 mb-5  text-base text-fc dark:text-fcd">Pesan :"Jangan sampai memutuskan saliturahmi.ingat bahwa dulu ada yang saling menolong"<br>
+                            <p class="ml-4 mb-5  text-base text-fc dark:text-fcd">Pesan :"Jangan sampai memutuskan saliturahmi. Ingat bahwa dulu ada yang saling menolong"<br>
                                 <br>
                                 Moto :"Saya bersaksi bahwa tidak ada Tuhan selain Allah dan aku bersaksi bahwa Nabi Muhammad adalah utusan Allah"<br><br>
                                 Kata Mutiara :"Untuk mencapai satu atau dua usaha yang sukses anda perlu gagal dibeberapa usaha lainnya.Hanya orang kuat lah yang bisa sukses"</p>
