--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <img src="aset/profile/ajis1.JPG" class=" rounded-xl w-full hover:scale-[105%] transition duration-300 " alt="gambar">
                         <div class="py-8 px6 pb-7 ">
                             <h3 class="ml-4 block mb-3 font-semibold text-xl text-fc dark:text-fcd hover:scale-[105%] transition duration-300 ">AJIS JULPIANA</h3>
-                            <p class="ml-4 mb-5  text-base text-fc dark:text-fcd">Kitu w pokonamah</p>
+                            <p class="ml-4 mb-5  text-base text-fc dark:text-fcd">Kitu we pokonamah</p>
                             <div class="ml-4 flex">
                             </div>                        
                         </div>
